TestSuite/errors/err0377.pas
type
  t1 = class
    o: Object;
    property p1: string read o?.ToString;
  end;
  
begin 
end.